# Document-Carousel

./: .gitignore  .mcp.json  README.md  document_carousel_tool.py  pyproject.toml  retrieval_server.py
carousel-app/: package-lock.json  package.json  vite.config.ts
carousel-app/src/: App.tsx  index.css
carousel-mcp-app/: main.ts  package.json
carousel-mcp-app/src/: mcp-app.tsx
carousel-open-webui-app/src/: App.css
docker/: Dockerfile.retrieval  docker-compose.yml
mcp-app-bridge/: docker-compose.yml  resource_context_filter.py  test-tool.py  tool.py
mcp-app-bridge/open-webui-loader/: package-lock.json  package.json  tsconfig.json  vite.config.ts
mcp-app-bridge/open-webui-loader/src/: loader.ts
testing/: .env.example  create_test_collection.py  test_retrieval_server.py
