[project]
name = "document-carousel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.0",
    "langchain-openai==1.2.2",
    "langchain-qdrant==1.1.0",
    "pydantic>=2.7.4",
    "uvicorn[standard]>=0.30.0",
]
